// stockTracking.ts
import { TrackStockRequest, TrackStockResponse } from './proto/stock_pb';

export function trackStock(call: any, callback: any) {
  const request: TrackStockRequest = call.request;
  // Code to fetch stock quantity for given productId
  const quantity = 50; // Example quantity
  const response = new TrackStockResponse();
  response.setQuantity(quantity);
  callback(null, response);
}
